--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,19 @@
 @import-normalize;
 
 body {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  min-height: 100vh;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+#root {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 code {
@@ -20,7 +23,9 @@ code {
 
 .wrapper {
   display: flex;
+  justify-content: center;
   flex-direction: column;
+  flex: 1 0 auto;
 }
 
 input[type="textarea"] {
@@ -28,12 +33,12 @@ input[type="textarea"] {
 }
 
 input[type="radio"] {
-  margin-right: 10px;
+  margin-left: 10px;
 }
 
 label {
-  margin-left: 10px;
-  margin-right: 5px;
+  margin-left: 5px;
+  margin-right: 10px;
 }
 
 h1 {
